_drafts/rv_convert_895.err
  File "/nfs/tts2/home/joregan/rv_convert.py", line 33
    }
    ^
SyntaxError: closing parenthesis '}' does not match opening parenthesis '(' on line 29
